--- a/ITracker/appsettings.Development.json
+++ b/ITracker/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DbConnection": "Data Source=(localdb)\\MSSQLLocalDB;database=InitiativesTracker;Trusted_Connection=true"
   }
 }
